dataset1235/2025-2/1153765216/users/2357208246/executions/2747719322_4233865845.log
== RUN (2025-08-14 18:46:37)
-- CODE: 
tempC = float(input())

tempF = temC * (9/5) + 32

print(round(tempF, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 18:47:15)
-- CODE: 
tempC = float(input())
tempF = temC * (9/5) + 32
print(round(tempF, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 18:46:35)
-- CODE: 
tempC = float(input())

tempF = temC * (9/5) + 32

print(round(tempF, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 18:47:24)
-- CODE: 
tempC = float(input())
tempF = tempC * (9/5) + 32
print(round(tempF, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 18:47:02)
-- CODE: 
tempC = float(input())
tempF = temC * (9/5) + 32
print(round(tempF, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = temC * (9/5) + 32
            ^^^^
NameError: name 'temC' is not defined. Did you mean: 'tempC'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 18:47:29)
-- CODE: 
tempC = float(input())
tempF = tempC * (9/5) + 32
print(round(tempF, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
